compiler/tests/should-pass/FunctionParameterBounds.via
/* a polymorphic function */
fun add10{A, B}(a: int{A}, b: out int{B}) where (A <: B) {
    out b = a + 10;
}

fun main() {
    val array = Array[int]{alice}(10);
    val a: int{alice} = 0;
    add10(a, val b);
    output b to alice;
}

host alice
host bob
