compiler/tests/should-fail/OutParamNoInitialization.via
/* OutParameterInitializationError */

fun add10(a: int{alice}, b: out int{bob}) {
    val x: int = b + 10;
    out b = declassify (endorse a to {alice & bob<-} from {alice}) + 10 to {(alice|bob)-> & (alice&bob)<-};
}

fun main() {
    val array = Array[int]{alice}(10);
    val a: int{alice} = 0;
    add10(a, val b);
    output a to alice;
}

host alice
host bob
